--- a/CuaHangTheThao/Web.config
+++ b/CuaHangTheThao/Web.config
@@ -5,10 +5,14 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="CuaHangTheThaoConnectionString" connectionString="Data Source=DESKTOP-66K7ARN;Initial Catalog=CuaHangTheThao;User ID=sa;Password=123"
-      providerName="System.Data.SqlClient" />
-    <add name="CuaHangTheThaoConnectionString1" connectionString="Data Source=HUNGTS-PC\SQLEXPRESS;Initial Catalog=CuaHangTheThao;Persist Security Info=True;User ID=sa;Password=!Tinhyeu123"
-      providerName="System.Data.SqlClient" />
+      <add name="CuaHangTheThaoConnectionString" connectionString="Data Source=DESKTOP-66K7ARN;Initial Catalog=CuaHangTheThao;User ID=sa;Password=123"
+          providerName="System.Data.SqlClient" />
+      <add name="CuaHangTheThaoConnectionString1" connectionString="Data Source=HUNGTS-PC\SQLEXPRESS;Initial Catalog=CuaHangTheThao;Persist Security Info=True;User ID=sa;Password=!Tinhyeu123"
+          providerName="System.Data.SqlClient" />
+      <add name="CuaHangTheThaoConnectionString2" connectionString="Data Source=LAPTOP-OGOI530P;Initial Catalog=CuaHangTheThao;Integrated Security=True"
+          providerName="System.Data.SqlClient" />
+      <add name="CuaHangTheThaoConnectionString3" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=CuaHangTheThao;Integrated Security=True"
+          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
